Bug fix for galleria galleries not showing footer bar. Temporary fix in place for galleria galleries causing scroll bar to inappropriately show up.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -229,6 +229,10 @@ body {
     min-height: calc(100vh - 50px - 50px);
     background-color: #fff;
 }
+.galleria.full-size{
+    /* Bug fix */
+    min-height: calc(100vh - 50px - 50px - 1px);
+}
 
 /* Articles */
 .article-content {
@@ -279,13 +283,11 @@ body {
 
 /* Galleria */
 .galleria {
-    position: absolute;
-    width: calc(100vw);
-    height: calc(100vh - 50px);
     background: #000;
     overflow: no-content no-content;
 }
 
+/* Bookmarklet */
 .bookmarklet {
     padding: 3px;
     padding-left: 5px;
